Changes towards version 0.7:
- UNKNOWNRES is now safe to load, and "loads" as its resvalue - Michael
- CODE is now SHIP, and uses an integer descriptor instead of a one-byte
  .cod file - Michael
- ResourceLoadFun is now descriptor-based, not stream-based - Michael
- Removed RES_TYPE enum, folded into ResourceDesc - Michael
- Split STRTAB into STRTAB (strings) and BINTAB (color/xlat tables) - Michael
- Removed internal references to defunct resource types - Michael
- Revamped resource system to only use .rmp files - Michael
- Isolated all constructed resources into cons_res.c - Michael
- Fixed a crash when conversing with music disabled - Michael
- Moved all resources into starcon.ls2 - Michael
- Fixed compile errors when compiling without joystick support - Michael
- Added endian-aware integer read functions to uio - SvdB
- Introduce the concept of an "InputContext" - SvdB
- Don't use alloca() in uio. - SvdB
- Replace PlayerOne/PlayerTwo by PlayerControls[0]/PlayerControls[1] - SvdB
- Moved comm resources into starcon.ls2 - Michael
- Repackaged static comm/ship data to it all uniquely named - Michael
- On MacOS X, search for the content in the application bundle, from Nic
- Planetside resource names are now consistent and generatable - Michael
- Androsynth ruins freeing condition now uses cycles (Bug #1028) - Michael
- .rmp files now carry the types of the targets - Michael
- Joystick threshold defaults to 10,000, not 0 (Bug #1046) - Michael
- Remove MEM_HANDLEs from everywhere outside of memlib - Michael
- Split out RESOURCEs from the loaded data in RACE_DESC and LOCDATA
  structures - Michael
- Prevent overflow for planet weight when scanning a planet (bug #1025)
  - from Benjamin Alan Weaver
- Don't set _POSIX_THREAD_SAFE_FUNCTIONS - SvdB
- Support for Windows CE. - SvdB with Pavel Chernikov
- Added support to the unix build system for explicitely specifying the name
  of the define to set to show when a symbol is found.