@@ -24,7 +24,7 @@
 #include "index.h"
 
 ResourceDesc *lookupResourceDesc (RESOURCE_INDEX idx, RESOURCE res);
-void *loadResourceDesc (ResourceDesc *desc);
+void loadResourceDesc (ResourceDesc *desc);
 
 void _set_current_index_header (RESOURCE_INDEX newResourceIndex);
 RESOURCE_INDEX _get_current_index_header (void);
